examples/test/testpolicy4216.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4216
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key29: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value26
      podSelector:
        matchLabels:
          key1: value29
          key32: value8
          key20: value49
